--- a/style.css
+++ b/style.css
@@ -303,7 +303,7 @@ a img.aligncenter {
 /*------------------------------------------------------------------
     HEADER
 -------------------------------------------------------------------*/
-.logo_img { height:70px !important; background:#000; border-radius:50%; margin-right:20px; }
+.logo_img { height:100px !important; border-radius:50%; margin-right:20px; }
 .logo_bar { display:flex; width:30%;  }
 .logo_bar h2 { align-self:center; padding:0px; font-weight: 700; }
 
