--- a/style.css
+++ b/style.css
@@ -303,8 +303,8 @@ a img.aligncenter {
 /*------------------------------------------------------------------
     HEADER
 -------------------------------------------------------------------*/
-.logo_img { height:100px !important; border-radius:50%; margin-right:20px; }
-.logo_bar { display:flex; width:30%;  }
+.logo_img { height:100px !important; border-radius:50%; margin-right:10px; }
+.logo_bar { display:flex; width:30%; padding:0px;  }
 .logo_bar h2 { align-self:center; padding:0px; font-weight: 700; }
 
 .menu_bar { width:50%; }
