--- a/style.css
+++ b/style.css
@@ -335,7 +335,7 @@ a img.aligncenter {
 .contacts h3, .contacts p { padding-left:90px; }
 .contacts h3 { font-size:20px; font-weight:500; }
 .contacts p { color:#fff; font-size:15px; }
-.map iframe{border-radius:15px;}
+.map iframe{border-radius:15px; width:100%; }
 
 .fa-camera:before { content:url('uploads/upw-arrow.png'); }
 .fat-nav{
@@ -345,6 +345,7 @@ a img.aligncenter {
 
 #mainNav.navbar-dark{
 	background: #ffffff;
+height: 105px;
 }
 
 .hamburger{
@@ -493,7 +494,7 @@ xclip
 
 
 #mainNav.navbar-shrink {
-    padding-top: 10px;
+    padding-top: 0px;
     padding-bottom: 10px;
     background-color: #ffffff;
 }
@@ -2710,11 +2711,237 @@ select.mobile-device {
 
 
 
+
+/*
+a {
+  text-decoration: none;
+  color: #1E1E23;
+  opacity:1;
+  font-family: 'work sans', sans serif;
+  font-size: 1.5em;
+  font-weight: 400;
+  transition: 200ms;
+}
+a:hover {
+  opacity:0.5;
+}
+ul {
+  padding: 0;
+  list-style-type: none;
+}
+
+*/
+nav {
+  background-color: #1E1E23;
+  height: 65px;
+}
+
+
+#menuToggle {
+  display: flex;
+  flex-direction: column;
+  position: relative;
+  top: 25px;
+  left: 25px;
+  z-index: 1;
+  -webkit-user-select: none;
+  user-select: none;
+}
+
+#menuToggle input
+{
+  display: flex;
+  width: 40px;
+  height: 32px;
+  position: absolute;
+  cursor: pointer;
+  opacity: 0;
+  z-index: 2;
+}
+
+#menuToggle span
+{
+  display: flex;
+  width: 29px;
+  height: 2px;
+  margin-bottom: 5px;
+  position: relative;
+  background: #ffffff;
+  border-radius: 3px;
+  z-index: 1;
+  transform-origin: 5px 0px;
+  transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
+              background 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
+              opacity 0.55s ease;
+}
+
+#menuToggle span:first-child
+{
+  transform-origin: 0% 0%;
+}
+
+#menuToggle span:nth-last-child(2)
+{
+  transform-origin: 0% 100%;
+}
+
+#menuToggle input:checked ~ span
+{
+  opacity: 1;
+  transform: rotate(45deg) translate(-3px, -1px);
+  background: #36383F;
+}
+#menuToggle input:checked ~ span:nth-last-child(3)
+{
+  opacity: 0;
+  transform: rotate(0deg) scale(0.2, 0.2);
+}
+
+#menuToggle input:checked ~ span:nth-last-child(2)
+{
+  transform: rotate(-45deg) translate(0, -1px);
+}
+
+#menu
+{
+  position: absolute;
+  width: 180px;
+  height: 350px;
+  box-shadow: 0 0 10px #85888C;
+  margin: -35px 0 0 -50px;
+  padding: 50px;
+  padding-top: 100px;
+  background-color: #F5F6FA;
+  -webkit-font-smoothing: antialiased;
+  transform-origin: 0% 0%;
+  transform: translate(-100%, 0);
+  transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0);
+}
+
+#menu li
+{
+  padding: 10px 0;
+  transition-delay: 2s;
+}
+
+#menuToggle input:checked ~ ul
+{
+  transform: none;
+}
+
+.menu_bar, .service_desktop{ display:block; }
+ .menu_bar_mobile, .service_mobile { display:none; }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
  /* For mobile devices and Tablet */
-    @media (min-width: 320px) and (max-width: 768px) {
+    @media (max-width: 768px) {
       .container { max-width: 95%; }
-    } 
-	@media (min-width: 768px) and (max-width: 896px) {
+	  .last_sm_col { width: 100%; text-align: right; margin-top: -231px; padding-right:20px; }
+	  .navbar { padding:0px; }
+	  .logo_bar  { padding-left:10px; }
+	  #mainNav.navbar-dark{  height:110px; }
+	  .section-title { margin-bottom:30px; }
+	  .contact_details { margin-top: 0px; }
+	  .map iframe { height: 300px; width: 100%; }
+	  .services-inner-box { height:auto;}
+	  .heading { vertical-align: middle !important; }
+	  .heading h1 { margin-top:180px !important; }
+	  .fixed-top  { padding-bottom:50px; }
+	  .menu_bar { width: 75%; }
+	   .menu_bar, .service_desktop{ display:none !important; }
+ .menu_bar_mobile { display:block !important; }
+ .service_mobile{ display:flex !important; justify-content:space-between; }
+.service_mobile .col-md-3 { max-width:50%; flex:none; display:flex; }
+.contacts br {display:none;}
+.message-box p { font-size:15px !important; }
+} 
+
+@media (max-width: 568px) { 
+.service_mobile .col-md-3 { max-width:100%; }
+ }
+ 
+
+  @media (max-width: 414px) {
+    .filter-button-group button { width: 49%; }
+	  /*  .navbar-dark .navbar-brand {
+        width: 40% !important;
+        text-align: center;
+		display:block;
+    }*/
+	.logo_img { height:75px !important; margin-right:5px; }
+	.last_sm_col { margin-top:-200px; padding-right:10px;  }
+	.last_sm_col h3 { padding-right:10px; }
+	.logo_bar { padding-left: 0px; }
+	.section { padding:50px 0px; }
+}
+
+
+@media (max-width: 390px) {
+    .heading { padding: 0px 35px; }
+	h2 { font-size: 20px; }
+	.message-box p { font-size:15px !important; }
+	.gallery-single { margin: 30px 15px 0px; }
+	.contacts br {display:none;}
+}
+@media (max-width: 375px) { 
+.heading { padding: 0px 27px;  }
+}
+
+@media (max-width: 360px) { 
+      .filter-button-group button { width: 100%;}
+	  .heading { padding: 0px 20px;  }
+	  .last_sm_col h3 { font-size: 15px;  padding:10px 0px 3px;}
+	  .icon_facebook:before { content: ""; background-image:url(uploads/facebook.png); background-size: 100% 100%; display: inline-block;
+/*size of your image*/
+  height: 25px;
+  width:25px;}
+  
+   .icon_instagram:before { content: ""; background-image:url(uploads/instagram.png); background-size: 100% 100%; display: inline-block;
+/*size of your image*/
+  height: 25px;
+  width:25px;}
+  
+   .icon_youtube:before { content: ""; background-image:url(uploads/youtube.png); background-size: 100% 100%; display: inline-block;
+/*size of your image*/
+  height: 25px;
+  width:25px;}
+  
+  .social_media_wrp i {
+    margin-right: 2px;
+}
+
+    .last_sm_col {
+        margin-top: -207px;
+    }
+	
+	#menu { padding-top:70px; height:300px; margin: -25px 0 0 -50px; }
+}
+
+
+	@media (min-width: 769px) and (max-width: 896px) {
       .container { max-width: 95%; }
 	  .navbar-dark .navbar-brand { width: 100% !important; background:#f1f1f1; }
 	  .menu_bar { width: 80%; }
@@ -2726,6 +2953,7 @@ select.mobile-device {
 	  .message-box p { font-size:16px !important; }
 	  .message-box h2 { font-size:30px; }
 	  .section-title { margin-bottom:20px; }
+	  #mainNav.navbar-dark { height: 190px; }
     } 
 
     /* For PC with minimum resolution till your PC resolution */ 
